[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/UI/dialogue/Dialog_Player.gd" type="Script" id=1]
[ext_resource path="res://fonts/custom/Dialogue_White_Trial.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/custom/Dialogue_Yellow_Trial.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/custom/Dialogue_Blue_Trial.tres" type="DynamicFont" id=4]
[ext_resource path="res://images/UI/texture/menu_section_9patch.png" type="Texture" id=5]
[ext_resource path="res://scenes/UI/Dialog/Dialog_Option.tscn" type="PackedScene" id=6]
[ext_resource path="res://images/character/bobbington/1.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
resource_name = "TextDisplay"
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="Dialog_Player" type="Node"]
script = ExtResource( 1 )

[node name="Dialog_Box" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character_Texture" type="TextureRect" parent="Dialog_Box"]
margin_left = -801.682
margin_top = -547.048
margin_right = 199.318
margin_bottom = 952.952
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body_NinePatchRect" type="NinePatchRect" parent="Dialog_Box"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -497.545
margin_top = -10.1372
margin_right = 502.455
margin_bottom = 245.863
rect_min_size = Vector2( 900, 256 )
texture = ExtResource( 5 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Dialog_Box/Body_NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 48.0
margin_right = -8.0
margin_bottom = -13.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body_Label" type="RichTextLabel" parent="Dialog_Box/Body_NinePatchRect/MarginContainer"]
margin_right = 986.0
margin_bottom = 195.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/italics_font = ExtResource( 4 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "Man I would die for some [b][color=#FFF600]Orange Juice[/color][/b].
[i][color=#94FEFF]Hhmmm... Sweet sweet orange juice...[/color][/i]"
meta_underlined = false
text = "Man I would die for some Orange Juice.
Hhmmm... Sweet sweet orange juice..."

[node name="Scroll_Timer" type="Timer" parent="Dialog_Box/Body_NinePatchRect/MarginContainer/Body_Label"]
wait_time = 0.001

[node name="Body_player" type="AnimationPlayer" parent="Dialog_Box/Body_NinePatchRect/MarginContainer/Body_Label"]
anims/TextDisplay = SubResource( 1 )

[node name="Speaker_NinePatchRect" type="NinePatchRect" parent="Dialog_Box/Body_NinePatchRect"]
margin_left = -41.9886
margin_top = -34.9905
margin_right = 258.011
margin_bottom = 31.0095
rect_min_size = Vector2( 180, 0 )
texture = ExtResource( 5 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speaker_Label" type="Label" parent="Dialog_Box/Body_NinePatchRect/Speaker_NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
text = "Speaker"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue_Icon" type="NinePatchRect" parent="Dialog_Box/Body_NinePatchRect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -249.0
margin_top = -19.0
margin_right = 7.0
margin_bottom = 40.0
rect_min_size = Vector2( 256, 44 )
texture = ExtResource( 5 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Dialog_Box/Body_NinePatchRect/Continue_Icon"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -30.0
margin_right = 128.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 2 )
text = "Spacebar"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectChoice" type="NinePatchRect" parent="Dialog_Box/Body_NinePatchRect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -249.0
margin_top = -19.0
margin_right = 7.0
margin_bottom = 40.0
rect_min_size = Vector2( 256, 44 )
texture = ExtResource( 5 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select_Label" type="Label" parent="Dialog_Box/Body_NinePatchRect/SelectChoice"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -30.0
margin_right = 128.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 2 )
text = "Choice"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option_list" type="VBoxContainer" parent="Dialog_Box/Body_NinePatchRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -474.895
margin_top = -130.178
margin_right = 25.1055
margin_bottom = 21.8219
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option" parent="Dialog_Box/Body_NinePatchRect/Option_list" instance=ExtResource( 6 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 0.0
margin_right = 500.0
margin_bottom = 48.0

[node name="Option2" parent="Dialog_Box/Body_NinePatchRect/Option_list" instance=ExtResource( 6 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 500.0
margin_bottom = 100.0

[node name="Option3" parent="Dialog_Box/Body_NinePatchRect/Option_list" instance=ExtResource( 6 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 104.0
margin_right = 500.0
margin_bottom = 152.0
[connection signal="timeout" from="Dialog_Box/Body_NinePatchRect/MarginContainer/Body_Label/Scroll_Timer" to="Dialog_Box/Body_NinePatchRect/MarginContainer/Body_Label" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="Dialog_Box/Body_NinePatchRect/MarginContainer/Body_Label/Body_player" to="." method="_on_Body_player_animation_finished"]
